# oulad-ml-python

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: logging.yml
data/datatopredict/: H1 - resumen_estadistico_datasetapredecir.csv  datasetapredecir.csv  resumen_estadistico_datasetapredecir.csv
data/metrics_models/: H1 - logistic_regression_metrics.csv  H1.2- random_forest_regressor_metrics.csv  H2 - decision_tree_metrics.csv  H2 - history_lstm.csv  H2 - kmeans_metrics.csv  H2 - lstm_metrics.csv
data/ordmapping/: all_ordinal_mappings.csv
data/result_pred/: H1 - Clustering resumen perfiles clusters.csv  H1 - Regresión Logística pred_estudiantes pass or not.csv  H1 - TestDataSet_resultados_anova.csv  H1 - TestDataSet_resultados_ttest.csv  H1.2 - Clustering resumen perfiles clusters.csv  H1.2 - Random Forest pred_estudiantes score.csv  H2 - kmeans_predictions.csv  H2 - predicciones_arbol_decision.csv  H2 - predicciones_lstm.csv  H2 - predicciones_rf.csv
notebooks/: 00_eda_overview.ipynb  H1 - Hipotesis.ipynb  H2 - Hipotesis.ipynb
src/oulad_etl/: cli.py  log.py  settings.py
src/oulad_etl/etl/: csv_models.py  download.py  excel_models.py  load.py  models.py  summary.py  transform.py
